crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_composite_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT question, answer, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary') where id > 10 order by _score desc, id LIMIT 4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("secondary")).question, vector_search(qs, Utf8("secondary")).answer, _score                                                                                                              |
|               |   Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary")).id ASC NULLS LAST, fetch=4                                                                                                                            |
|               |     Projection: vector_search(qs, Utf8("secondary")).question, vector_search(qs, Utf8("secondary")).answer, trunc(vector_search(qs, Utf8("secondary"))._score, Int64(3)) AS _score, vector_search(qs, Utf8("secondary")).id |
|               |       TableScan: vector_search(qs, Utf8("secondary")) projection=[_score, answer, id, question], full_filters=[vector_search(qs, Utf8("secondary")).id > Int64(10)]                                                         |
| physical_plan | ProjectionExec: expr=[question@0 as question, answer@1 as answer, _score@2 as _score]                                                                                                                                       |
|               |   SortPreservingMergeExec: [_score@2 DESC, id@3 ASC NULLS LAST], fetch=4                                                                                                                                                    |
|               |     SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@3 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                        |
|               |       ProjectionExec: expr=[question@1 as question, answer@3 as answer, trunc(_score@2, 3) as _score, id@0 as id]                                                                                                           |
|               |         HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1), (question@1, question@2)], projection=[id@0, question@1, _score@2, answer@3]                                   |
|               |           CoalescePartitionsExec                                                                                                                                                                                            |
|               |             ProjectionExec: expr=[union_extract(__datafusion_extracted_2@0, int) as id, union_extract(__datafusion_extracted_3@1, str) as question, 1 - distance@2 as _score]                                               |
|               |               FilterExec: union_extract(__datafusion_extracted_1@0, int) > 10, projection=[__datafusion_extracted_2@2, __datafusion_extracted_3@3, distance@1]                                                              |
|               |                 ProjectionExec: expr=[json_get(key@0, id) as __datafusion_extracted_1, distance@1 as distance, json_get(key@0, id) as __datafusion_extracted_2, json_get(key@0, question) as __datafusion_extracted_3]      |
|               |                   BytesProcessedExec                                                                                                                                                                                        |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                    |
|               |                       S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                          |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                              |
|               |             FilterExec: id@1 > 10                                                                                                                                                                                           |
|               |               SchemaCastScanExec                                                                                                                                                                                            |
|               |                 BytesProcessedExec                                                                                                                                                                                          |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                         |
|               |                                                                                                                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
