crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_composite_vector_search_sql_single_column.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "trunc(vector_search(qs, Utf8(\"second\")).score,Int64(2))": 0.891
  },
  {
    "id": 1316,
    "answer": "\\(\\boxed{2a + 4b}\\)",
    "trunc(vector_search(qs, Utf8(\"second\")).score,Int64(2))": 0.843
  },
  {
    "id": 590,
    "answer": "\\(\\boxed{x = A + E}\\)",
    "trunc(vector_search(qs, Utf8(\"second\")).score,Int64(2))": 0.836
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "trunc(vector_search(qs, Utf8(\"second\")).score,Int64(2))": 0.833
  }
]
