crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_composite_vector_search_sql_single_column_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(score, 3) FROM vector_search(qs, 'second') order by score desc LIMIT 4"
snapshot_kind: text
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                              |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second")).id, vector_search(qs, Utf8("second")).answer, trunc(vector_search(qs, Utf8("second")).score,Int64(3))                                               |
|               |   Sort: vector_search(qs, Utf8("second")).score DESC NULLS FIRST, fetch=4                                                                                                                         |
|               |     Projection: vector_search(qs, Utf8("second")).id, vector_search(qs, Utf8("second")).answer, trunc(vector_search(qs, Utf8("second")).score, Int64(3)), vector_search(qs, Utf8("second")).score |
|               |       BytesProcessedNode                                                                                                                                                                          |
|               |         TableScan: vector_search(qs, Utf8("second")) projection=[id, answer, score]                                                                                                               |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search(qs, Utf8("second")).score,Int64(3))@2 as trunc(vector_search(qs, Utf8("second")).score,Int64(3))]                       |
|               |   SortPreservingMergeExec: [score@3 DESC], fetch=4                                                                                                                                                |
|               |     SortExec: TopK(fetch=4), expr=[score@3 DESC], preserve_partitioning=[true]                                                                                                                    |
|               |       ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(score@2, 3) as trunc(vector_search(qs, Utf8("second")).score,Int64(3)), score@2 as score]                                       |
|               |         BytesProcessedExec                                                                                                                                                                        |
|               |           ProjectionExec: expr=[id@0 as id, answer@2 as answer, score@1 as score]                                                                                                                 |
|               |             CoalesceBatchesExec: target_batch_size=8192                                                                                                                                           |
|               |               HashJoinExec: mode=Partitioned, join_type=Left, on=[(id@0, id@0), (question@1, question@2)], projection=[id@0, score@2, answer@4]                                                   |
|               |                 RepartitionExec: partitioning=Hash([id@0, question@1], 3), input_partitions=3                                                                                                     |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                     |
|               |                     ProjectionExec: expr=[union_extract(json_get(key@0, id), int) as id, union_extract(json_get(key@0, question), str) as question, 1 - distance@1 as score]                      |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                        |
|               |                         S3VectorsQueryExec: limit=30                                                                                                                                              |
|               |                 RepartitionExec: partitioning=Hash([id@0, question@2], 3), input_partitions=3                                                                                                     |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                            |
|               |                     CoalesceBatchesExec: target_batch_size=8192                                                                                                                                   |
|               |                       SchemaCastScanExec                                                                                                                                                          |
|               |                         DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                         |
|               |                                                                                                                                                                                                   |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
