crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_composite_view_vector_search_sql_composite_key.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 468,
    "question": "How many multiples of 4 are there between 1 and 30? List them and count the total.",
    "answer": "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples.",
    "trunc(vector_search(qs_view, Utf8(\"second\"))._score,Int64(3))": 0.54
  },
  {
    "id": 1277,
    "question": "Which base number, when raised to the fifth power, equals thirty-two?",
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "trunc(vector_search(qs_view, Utf8(\"second\"))._score,Int64(3))": 0.539
  },
  {
    "id": 189,
    "question": "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\).",
    "answer": "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]",
    "trunc(vector_search(qs_view, Utf8(\"second\"))._score,Int64(3))": 0.538
  },
  {
    "id": 948,
    "question": "What is the fifth root of 32?",
    "answer": "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "trunc(vector_search(qs_view, Utf8(\"second\"))._score,Int64(3))": 0.528
  }
]
