crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_composite_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, ts.redact_tied_results)"
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "qs",
      "matches": "[redacted]",
      "primary_key": "[redacted]",
      "_score": "[redacted]"
    },
    {
      "dataset": "qs",
      "matches": "[redacted]",
      "primary_key": "[redacted]",
      "_score": "[redacted]"
    }
  ]
}
