crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_metadata_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(score, 3) FROM vector_search(qs, 'second') order by score desc LIMIT 4"
snapshot_kind: text
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                              |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second")).id, vector_search(qs, Utf8("second")).answer, trunc(vector_search(qs, Utf8("second")).score,Int64(3))                                               |
|               |   Sort: vector_search(qs, Utf8("second")).score DESC NULLS FIRST, fetch=4                                                                                                                         |
|               |     Projection: vector_search(qs, Utf8("second")).id, vector_search(qs, Utf8("second")).answer, trunc(vector_search(qs, Utf8("second")).score, Int64(3)), vector_search(qs, Utf8("second")).score |
|               |       BytesProcessedNode                                                                                                                                                                          |
|               |         TableScan: vector_search(qs, Utf8("second")) projection=[id, answer, score]                                                                                                               |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search(qs, Utf8("second")).score,Int64(3))@2 as trunc(vector_search(qs, Utf8("second")).score,Int64(3))]                       |
|               |   SortPreservingMergeExec: [score@3 DESC], fetch=4                                                                                                                                                |
|               |     SortExec: TopK(fetch=4), expr=[score@3 DESC], preserve_partitioning=[true]                                                                                                                    |
|               |       ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(score@2, 3) as trunc(vector_search(qs, Utf8("second")).score,Int64(3)), score@2 as score]                                       |
|               |         BytesProcessedExec                                                                                                                                                                        |
<<<<<<< HEAD
|               |           ProjectionExec: expr=[CAST(key@1 AS Int64) as id, answer@0 as answer, 1 - distance@2 as score]                                                                                          |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                  |
|               |               S3VectorsQueryExec: limit=30                                                                                                                                                        |
=======
|               |           ProjectionExec: expr=[id@0 as id, answer@2 as answer, score@1 as score]                                                                                                                 |
|               |             BytesProcessedExec                                                                                                                                                                    |
|               |               ProjectionExec: expr=[CAST(key@1 AS Int64) as id, 1 - distance@2 as score, answer@0 as answer]                                                                                      |
|               |                 BytesProcessedExec                                                                                                                                                                |
|               |                   CooperativeExec                                                                                                                                                                 |
|               |                     CooperativeExec                                                                                                                                                               |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                        |
|               |                         CooperativeExec                                                                                                                                                           |
|               |                           S3VectorsQueryExec: limit=30                                                                                                                                            |
>>>>>>> origin/trunk
|               |                                                                                                                                                                                                   |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
