crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_metadata_vector_search_sql_filters.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "_score": "0.87"
  },
  {
    "id": 1316,
    "answer": "\\(\\boxed{2a + 4b}\\)",
    "_score": "0.83"
  },
  {
    "id": 590,
    "answer": "\\(\\boxed{x = A + E}\\)",
    "_score": "0.82"
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "_score": "0.82"
  }
]
